# ghtree

./: .dockerignore  Dockerfile  Dockerfile.full  Dockerfile.slim  README.md  pyproject.toml  requirements.txt
app/: main.py  parse.py  routes.py
app/data/: god.md  rooyca.md
app/static/css/: main.css  main_new.css
app/templates/: 404.html  main.html  username.html  v2_user.html
app/templates/shared/: _base.html  _footer.html
tests/: test_main.py
